@@ -1,11 +1,11 @@
 {
   "count": 155,
-  "uniques": 39,
+  "uniques": 38,
   "clones": [
     {
       "timestamp": "2023-09-14T00:00:00Z",
-      "count": 19,
-      "uniques": 10
+      "count": 18,
+      "uniques": 9
     },
     {
       "timestamp": "2023-09-15T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-09-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
