@@ -1,3 +1,12 @@
+2023-09-28T08:16:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6336311894 # 1938
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
+* notice: last 14d: unq all: 38 155
+* notice: prev accum: outdated-unq outdated-all / unq all: 1172 2882 / 1231 3037
+* notice: next accum: outdated-unq outdated-all / unq all: 1172 2882 / 1232 3038
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-14 2023-09-28]
+
 2023-09-28T00:57:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6333185404 # 1937
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
